# meta-nn

./: .clangd  .gitignore  CMakeLists.txt  exec_build.sh
MetaNN/: CMakeLists.txt
MetaNN/data/facilities/: allocators.hpp  device_tag.hpp  traits.hpp
MetaNN/facilities/: CMakeLists.txt  null_param.hpp  traits.hpp  type_id.hpp
MetaNN/facilities/cont_metafuns/: helpers.hpp  map.hpp  sequential.hpp  set.hpp  value_sequential.hpp
Test/: CMakeLists.txt  main.cpp
Unittest/order_dict/: order_dict.cc
